crates/privacy-pools-sdk-core/tests/ui/secret_payloads_hash_order.stderr
error[E0277]: the trait bound `Commitment: Hash` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:21:18
   |
21 |     require_hash(&commitment);
   |     ------------ ^^^^^^^^^^^ the trait `Hash` is not implemented for `Commitment`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_hash`
  --> tests/ui/secret_payloads_hash_order.rs:8:20
   |
 8 | fn require_hash<T: Hash>(_: &T) {}
   |                    ^^^^ required by this bound in `require_hash`

error[E0277]: the trait bound `CommitmentWitnessRequest: Hash` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:22:18
   |
22 |     require_hash(&commitment_request);
   |     ------------ ^^^^^^^^^^^^^^^^^^^ the trait `Hash` is not implemented for `CommitmentWitnessRequest`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_hash`
  --> tests/ui/secret_payloads_hash_order.rs:8:20
   |
 8 | fn require_hash<T: Hash>(_: &T) {}
   |                    ^^^^ required by this bound in `require_hash`

error[E0277]: the trait bound `WithdrawalWitnessRequest: Hash` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:23:18
   |
23 |     require_hash(&withdrawal_request);
   |     ------------ ^^^^^^^^^^^^^^^^^^^ the trait `Hash` is not implemented for `WithdrawalWitnessRequest`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_hash`
  --> tests/ui/secret_payloads_hash_order.rs:8:20
   |
 8 | fn require_hash<T: Hash>(_: &T) {}
   |                    ^^^^ required by this bound in `require_hash`

error[E0277]: the trait bound `CommitmentCircuitInput: Hash` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:24:18
   |
24 |     require_hash(&commitment_input);
   |     ------------ ^^^^^^^^^^^^^^^^^ the trait `Hash` is not implemented for `CommitmentCircuitInput`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_hash`
  --> tests/ui/secret_payloads_hash_order.rs:8:20
   |
 8 | fn require_hash<T: Hash>(_: &T) {}
   |                    ^^^^ required by this bound in `require_hash`

error[E0277]: the trait bound `WithdrawalCircuitInput: Hash` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:25:18
   |
25 |     require_hash(&withdrawal_input);
   |     ------------ ^^^^^^^^^^^^^^^^^ the trait `Hash` is not implemented for `WithdrawalCircuitInput`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_hash`
  --> tests/ui/secret_payloads_hash_order.rs:8:20
   |
 8 | fn require_hash<T: Hash>(_: &T) {}
   |                    ^^^^ required by this bound in `require_hash`

error[E0277]: the trait bound `Commitment: Ord` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:27:19
   |
27 |     require_order(&commitment);
   |     ------------- ^^^^^^^^^^^ the trait `Ord` is not implemented for `Commitment`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_order`
  --> tests/ui/secret_payloads_hash_order.rs:9:21
   |
 9 | fn require_order<T: Ord>(_: &T) {}
   |                     ^^^ required by this bound in `require_order`

error[E0277]: the trait bound `CommitmentWitnessRequest: Ord` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:28:19
   |
28 |     require_order(&commitment_request);
   |     ------------- ^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `CommitmentWitnessRequest`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_order`
  --> tests/ui/secret_payloads_hash_order.rs:9:21
   |
 9 | fn require_order<T: Ord>(_: &T) {}
   |                     ^^^ required by this bound in `require_order`

error[E0277]: the trait bound `WithdrawalWitnessRequest: Ord` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:29:19
   |
29 |     require_order(&withdrawal_request);
   |     ------------- ^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `WithdrawalWitnessRequest`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_order`
  --> tests/ui/secret_payloads_hash_order.rs:9:21
   |
 9 | fn require_order<T: Ord>(_: &T) {}
   |                     ^^^ required by this bound in `require_order`

error[E0277]: the trait bound `CommitmentCircuitInput: Ord` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:30:19
   |
30 |     require_order(&commitment_input);
   |     ------------- ^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `CommitmentCircuitInput`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_order`
  --> tests/ui/secret_payloads_hash_order.rs:9:21
   |
 9 | fn require_order<T: Ord>(_: &T) {}
   |                     ^^^ required by this bound in `require_order`

error[E0277]: the trait bound `WithdrawalCircuitInput: Ord` is not satisfied
  --> tests/ui/secret_payloads_hash_order.rs:31:19
   |
31 |     require_order(&withdrawal_input);
   |     ------------- ^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `WithdrawalCircuitInput`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_order`
  --> tests/ui/secret_payloads_hash_order.rs:9:21
   |
 9 | fn require_order<T: Ord>(_: &T) {}
   |                     ^^^ required by this bound in `require_order`
